--- a/app/src/main/res/layout/news_layout.xml
+++ b/app/src/main/res/layout/news_layout.xml
@@ -7,8 +7,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
 
         <TextView
             android:id="@+id/title"
@@ -21,6 +21,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="date" />
+
+        <TextView
+            android:id="@+id/articleSection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="section" />
 
     </LinearLayout>
 
