feat: displays contributors

--- a/app/src/main/res/layout/news_layout.xml
+++ b/app/src/main/res/layout/news_layout.xml
@@ -14,31 +14,43 @@
 
         <TextView
             android:id="@+id/title"
+            style="@style/article_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            style="@style/article_title"
             tools:text="Title" />
 
         <TextView
             android:id="@+id/date"
+            style="@style/article_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/title"
             android:layout_alignRight="@id/title"
-            style="@style/article_date"
             tools:text="date" />
 
         <TextView
-            android:id="@+id/articleSection"
-            android:layout_width="wrap_content"
-            android:layout_below="@id/title"
+            android:id="@+id/contributor"
             style="@style/article_date"
-            android:layout_alignLeft="@id/title"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/title"
+            android:layout_toLeftOf="@id/date"
+            android:layout_toRightOf="@id/articleSection"
+            tools:text="Author" />
+
+        <TextView
+            android:id="@+id/articleSection"
+            style="@style/article_date"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/title"
+            android:layout_alignLeft="@id/title"
             tools:text="section" />
 
     </RelativeLayout>
